--- a/about.html
+++ b/about.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>EventSpace</title>
-</head>
-<body>
-  <div class="bg-amber-300 h-screen p-10"><div class="button w-fit cursor-pointer whitespace-nowrap rounded-full border border-solid px-6 py-3 text-center transition-colors border-transparent bg-text-contrast text-accent hover:bg-bg-blue-hovered hover:text-accent-hovered active:bg-bg-blue-light"><span>Super Button</span></div></div>
-  <script src="./core.js" defer></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="./style.css"><title>EventSpace</title></head><body><div class="bg-amber-300 h-screen p-10"><div class="button w-fit cursor-pointer whitespace-nowrap rounded-full border border-solid px-6 py-3 text-center transition-colors border-transparent bg-text-contrast text-accent hover:bg-bg-blue-hovered hover:text-accent-hovered active:bg-bg-blue-light"><span>Super Button</span></div></div><script src="./core.js" defer="defer"></script></body></html>
